2010-01-08	Tristan Tarrant <nadir@users.sourceforge.net>
	* First commit of 2010 and it isn't by Marzo !!!
	* Main screen is now at 320x200 to be consistent with the default
	  game resolution

2009-11-05	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed double-delete bug in midi driver backend for MT32 midi conversion.

2009-09-13 Dominik Reichardt <dominus@users.sourceforge.net>
	* Fixed numbering in Documentation and FAQ
	* docs/xml/makefile: added simple duplicating rule for README and FAQ
	
2009-08-16	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed bugs #2834246, #2833614 and #2830990.
	* Fixed Gameplay options gump to refer to the new translucent colors.
	* Palette transitions did not load patch palettes (fixes bug #2816773).
	* Fixed bug #2813103.

2009-07-21	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Changing version string to "svn" instead of "cvs" (bug #2822452).
	* SDL video driver on Mac OS X is set to x11 if Exult Studio support is on.
	* Fixed bug #2816756.
	* Added default avatar_data.txt for new games created with ES.

2009-07-16	Dominik Reichardt <dominus@users.sourceforge.net>
	* Updated Documentation,FAQ and README.MacOSX
	
2009-07-15	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* A few compilation fixes/improvements for Mac OS X (courtesy of Dominus).

2009-07-02	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* mapedit/exult_studio.glade: Fixed a couple mislabeled flags in the NPC
	  editing window.
	* audio/midi_drivers/ALSAMidiDriver.cpp: Fixed invalid conversion.
	* data/Makefile.am: Remove error with 'make install'.

2009-06-26	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* exult.cc: --buildmap can now be used for maps other than map 0 through the
	  "--mapnum <N>" parameter Disallowed --game if the game had been specified
	  otherwise (--bg, --si, --fov, --ss).
	* shapeid.*, docs/u7tech.txt, fnames.h, palettes.cc, win32/*, data/*: There
	  were actually 17, not 11, xform tables used in the original games; Exult